--- a/code/utils_and_test/unzip_ds.ipynb
+++ b/code/utils_and_test/unzip_ds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "93aeb50b-24a7-482e-bd76-29d32060bda9",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5524793b-5f42-4fcf-9433-0ec1eccbe305",
    "metadata": {},
    "outputs": [
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1cee89b3-dbd1-49c7-9a16-a8aaabc4ae7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.unpack_archive('../../datasets/ds2fire.zip', '../../datasets/ds2fire')"
+    "shutil.unpack_archive('../../datasets/dfire_mini.zip', '../../datasets/dfire_mini')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "5c6bd5b2-6b89-41ed-b1e4-8be7d14dff6a",
    "metadata": {},
    "outputs": [
@@ -49,12 +49,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17221\n"
+      "100\n"
      ]
     }
    ],
    "source": [
-    "print(len(os.listdir('../../datasets/ds2fire/dfire_yolo/train/labels')))"
+    "print(len(os.listdir('../../datasets/dfire_mini/train/labels')))"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
