Different Classification Thresholds. Evaluated with Aladdin mAP for Precision and F1. Predicted pics in .png.

--- a/code/object_detection/view_onnx_detections_&_save.ipynb
+++ b/code/object_detection/view_onnx_detections_&_save.ipynb
@@ -41,12 +41,12 @@
    },
    "outputs": [],
    "source": [
-    "save_folder = './predicted_images/onnx_classify_&_detect/'\n",
+    "save_folder = './predicted_images/onnx_classify_thres_&_detect/'\n",
     "save_only_detection = save_folder + 'only_detection'\n",
-    "save_classify_detect_02 = save_folder + 'classify_detect_2e-1'\n",
-    "save_classify_detect_015 = save_folder + 'classify_detect_15e-2'\n",
-    "save_classify_detect_01 = save_folder + 'classify_detect_1e-1'\n",
-    "save_classify_detect_001 = save_folder + 'classify_detect_1e-2'"
+    "save_classify_05_detect_02 = save_folder + 'classify_050_detect_2e-1'\n",
+    "save_classify_03_detect_02 = save_folder + 'classify_030_detect_2e-1'\n",
+    "# save_classify_detect_01 = save_folder + 'classify_detect_1e-1'\n",
+    "# save_classify_detect_001 = save_folder + 'classify_detect_1e-2'"
    ]
   },
   {
@@ -517,6 +517,7 @@
     "    img,\n",
     "    classify_session,\n",
     "    detect_session,\n",
+    "    classification_thres\n",
     "):\n",
     "    \n",
     "    if classify_session is not None:\n",
@@ -526,7 +527,9 @@
     "        # print(f'Fire pred: {classification_out[0][0][1]}')\n",
     "\n",
     "        # Use Detector if Classifier predicts fire or smoke\n",
-    "        if classification_out[0][0][0] >= 0 or classification_out[0][0][1] >= 0:\n",
+    "        if ( classification_out[0][0][0] >= classification_thres\n",
+    "            or \n",
+    "            classification_out[0][0][1] >= classification_thres ):\n",
     "            detect_inputs = {detect_session.get_inputs()[0].name: to_numpy(img)}\n",
     "            out = detect_session.run(None, detect_inputs)\n",
     "            out = torch.tensor(np.array(out[0]))\n",
@@ -554,6 +557,7 @@
     "    loader, \n",
     "    classification_model,\n",
     "    detection_model,\n",
+    "    classification_thres,\n",
     "    score_thres,\n",
     "    n_imgs, \n",
     "    save_name):\n",
@@ -607,6 +611,7 @@
     "                img_to_model_1,\n",
     "                classify_session,\n",
     "                detect_session,\n",
+    "                classification_thres=classification_thres\n",
     "            )\n",
     "                \n",
     "            pred_pic_1 = plot_predicted_img(\n",
@@ -639,6 +644,7 @@
     "                img_to_model_2,\n",
     "                classify_session,\n",
     "                detect_session,\n",
+    "                classification_thres=classification_thres\n",
     "            )\n",
     "                \n",
     "            pred_pic_2 = plot_predicted_img(\n",
@@ -705,12 +711,32 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/multiprocessing/util.py\", line 300, in _run_finalizers\n",
+      "    finalizer()\n",
+      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/multiprocessing/util.py\", line 224, in __call__\n",
+      "    res = self._callback(*self._args, **self._kwargs)\n",
+      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/multiprocessing/util.py\", line 133, in _remove_temp_dir\n",
+      "    rmtree(tempdir)\n",
+      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/shutil.py\", line 731, in rmtree\n",
+      "    onerror(os.rmdir, path, sys.exc_info())\n",
+      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/shutil.py\", line 729, in rmtree\n",
+      "    os.rmdir(path)\n",
+      "OSError: [Errno 39] Directory not empty: '/tmp/pymp-u1iba46b'\n"
+     ]
+    }
+   ],
    "source": [
     "plot_n_images_onnx(\n",
     "    loader = val_loader, \n",
     "    classification_model =None,\n",
     "    detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
+    "    classification_thres = 0, # No impact in this case\n",
     "    score_thres = 0.2,\n",
     "    n_imgs = N_IMGS_PLOT,\n",
     "    save_name = save_only_detection)"
@@ -721,7 +747,7 @@
    "id": "740aca01-3c0f-40b4-9fca-f7dbadd16c8e",
    "metadata": {},
    "source": [
-    "### Classify 1st + Detect 2nd: Score Threshold = 0.2"
+    "### Classify 1st + Detect 2nd: Classification Thres (50 %) = 0, Score Threshold = 0.2"
    ]
   },
   {
@@ -735,9 +761,35 @@
     "    loader = val_loader, \n",
     "    classification_model ='./onnx_models/medium_fassd__conv341_big__epoch=93.onnx',\n",
     "    detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
+    "    classification_thres = 0,\n",
     "    score_thres = 0.2,\n",
     "    n_imgs = N_IMGS_PLOT,\n",
-    "    save_name = save_classify_detect_02)"
+    "    save_name = save_classify_05_detect_02)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e5da049-a898-45f1-8d35-1b43dcf0e341",
+   "metadata": {},
+   "source": [
+    "### Classify 1st + Detect 2nd: Classification Thres (30 %) = -0.8472978604, Score Threshold = 0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0bf333c4-d178-4322-bc88-e8ce4cc4663c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_n_images_onnx(\n",
+    "    loader = val_loader, \n",
+    "    classification_model ='./onnx_models/medium_fassd__conv341_big__epoch=93.onnx',\n",
+    "    detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
+    "    classification_thres = -0.8472978604,\n",
+    "    score_thres = 0.2,\n",
+    "    n_imgs = N_IMGS_PLOT,\n",
+    "    save_name = save_classify_03_detect_02)"
    ]
   },
   {
@@ -750,18 +802,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "ca2f2276-956c-40af-ac8b-979c3857d894",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_n_images_onnx(\n",
-    "    loader = val_loader, \n",
-    "    classification_model ='./onnx_models/medium_fassd__conv341_big__epoch=93.onnx',\n",
-    "    detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
-    "    score_thres = 0.15,\n",
-    "    n_imgs = N_IMGS_PLOT,\n",
-    "    save_name = save_classify_detect_015)"
+    "# plot_n_images_onnx(\n",
+    "#     loader = val_loader, \n",
+    "#     classification_model ='./onnx_models/medium_fassd__conv341_big__epoch=93.onnx',\n",
+    "#     detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
+    "#     score_thres = 0.15,\n",
+    "#     n_imgs = N_IMGS_PLOT,\n",
+    "#     save_name = save_classify_detect_015)"
    ]
   },
   {
@@ -774,18 +826,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "64e826b6-3e64-44fb-a78e-e28b9ac304dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_n_images_onnx(\n",
-    "    loader = val_loader, \n",
-    "    classification_model ='./onnx_models/medium_fassd__conv341_big__epoch=93.onnx',\n",
-    "    detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
-    "    score_thres = 0.1,\n",
-    "    n_imgs = N_IMGS_PLOT,\n",
-    "    save_name = save_classify_detect_01)"
+    "# plot_n_images_onnx(\n",
+    "#     loader = val_loader, \n",
+    "#     classification_model ='./onnx_models/medium_fassd__conv341_big__epoch=93.onnx',\n",
+    "#     detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
+    "#     score_thres = 0.1,\n",
+    "#     n_imgs = N_IMGS_PLOT,\n",
+    "#     save_name = save_classify_detect_01)"
    ]
   },
   {
@@ -798,20 +850,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "67007a86-9450-42b4-bad3-ec3fba2e6038",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "plot_n_images_onnx(\n",
-    "    loader = val_loader, \n",
-    "    classification_model ='./onnx_models/medium_fassd__conv341_big__epoch=93.onnx',\n",
-    "    detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
-    "    score_thres = 0.01,\n",
-    "    n_imgs = N_IMGS_PLOT,\n",
-    "    save_name = save_classify_detect_001)"
+    "# plot_n_images_onnx(\n",
+    "#     loader = val_loader, \n",
+    "#     classification_model ='./onnx_models/medium_fassd__conv341_big__epoch=93.onnx',\n",
+    "#     detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
+    "#     score_thres = 0.01,\n",
+    "#     n_imgs = N_IMGS_PLOT,\n",
+    "#     save_name = save_classify_detect_001)"
    ]
   }
  ],
