--- a/code/object_detection/view_onnx_detections_&_save.ipynb
+++ b/code/object_detection/view_onnx_detections_&_save.ipynb
@@ -45,6 +45,7 @@
     "save_only_detection = save_folder + 'only_detection'\n",
     "save_classify_05_detect_02 = save_folder + 'classify_050_detect_2e-1'\n",
     "save_classify_03_detect_02 = save_folder + 'classify_030_detect_2e-1'\n",
+    "save_classify_03_detect_015 = save_folder + 'classify_030_detect_15e-2'\n",
     "# save_classify_detect_01 = save_folder + 'classify_detect_1e-1'\n",
     "# save_classify_detect_001 = save_folder + 'classify_detect_1e-2'"
    ]
@@ -519,23 +520,47 @@
     "    detect_session,\n",
     "    classification_thres\n",
     "):\n",
+    "    '''\n",
+    "    Function to perform 1 prediction\n",
+    "    \n",
+    "    Returns:\n",
+    "        - Detection prediction, as yolo v1 cube\n",
+    "        - Result of classification, if performed:\n",
+    "            - None:  no classification\n",
+    "            - 0:     background\n",
+    "            - 1:     smoke\n",
+    "            - 2:     fire\n",
+    "            - 3:     smoke and fire\n",
+    "    '''\n",
+    "    \n",
+    "    classification_pred = None\n",
     "    \n",
     "    if classify_session is not None:\n",
     "        classify_inputs = {classify_session.get_inputs()[0].name: to_numpy(img)}\n",
     "        classification_out = classify_session.run(None, classify_inputs)\n",
     "        # print(f'Smoke pred: {classification_out[0][0][0]}')\n",
     "        # print(f'Fire pred: {classification_out[0][0][1]}')\n",
+    "        smoke_pred = classification_out[0][0][0]\n",
+    "        fire_pred = classification_out[0][0][1]\n",
     "\n",
     "        # Use Detector if Classifier predicts fire or smoke\n",
-    "        if ( classification_out[0][0][0] >= classification_thres\n",
-    "            or \n",
-    "            classification_out[0][0][1] >= classification_thres ):\n",
+    "        if ( smoke_pred >= classification_thres or fire_pred >= classification_thres ):\n",
     "            detect_inputs = {detect_session.get_inputs()[0].name: to_numpy(img)}\n",
     "            out = detect_session.run(None, detect_inputs)\n",
     "            out = torch.tensor(np.array(out[0]))\n",
     "            out = out.permute(0, 2, 3, 1)\n",
+    "            \n",
+    "            if smoke_pred >= classification_thres:\n",
+    "                if fire_pred >= classification_thres:\n",
+    "                    classification_pred = 3 # Smoke & Fire\n",
+    "                else:\n",
+    "                    classification_pred = 1 # Only Smoke\n",
+    "            else:\n",
+    "                classification_pred = 2 # Only Fire\n",
+    "            \n",
     "        else:\n",
     "            out = torch.zeros(1,7,7,12)  \n",
+    "            classification_pred = 0 # Background\n",
     "    \n",
     "    else:\n",
     "        detect_inputs = {detect_session.get_inputs()[0].name: to_numpy(img)}\n",
@@ -546,7 +571,7 @@
     "    # Remove batch dim, although it makes no difference for get_bboxes_from_model_out \n",
     "    out = out[0]   \n",
     "    \n",
-    "    return out\n",
+    "    return out, classification_pred\n",
     "        \n",
     "# ______________________________________________________________ #\n",
     "# ____________________         Plot         ____________________ #\n",
@@ -575,6 +600,13 @@
     "    rows = int(n_imgs/2)\n",
     "    cols = 4\n",
     "    plot_img_height = n_imgs\n",
+    "    \n",
+    "    # CV2 rectangles color to identify classification result\n",
+    "    gray = (70, 70, 70) # -> background\n",
+    "    blue = (255, 255, 0) # -> smoke\n",
+    "    yellow = (0, 255, 255) # -> fire\n",
+    "    green = (0, 255, 0) # -> smoke & fire\n",
+    "    classification_colors = [gray, blue, yellow, green]\n",
     "    \n",
     "    fig, ax = plt.subplots(rows, cols, figsize=(10, n_imgs)) # 32 pics -> (10, 40) / 64 \n",
     "    \n",
@@ -607,7 +639,7 @@
     "            # pred_out_1 = model(img_to_model_1)\n",
     "            # pred_out_1 = pred_out_1.permute(0, 2, 3, 1)\n",
     "            \n",
-    "            pred_out_1 = onnx_predict(\n",
+    "            pred_out_1, classification_result_1 = onnx_predict(\n",
     "                img_to_model_1,\n",
     "                classify_session,\n",
     "                detect_session,\n",
@@ -619,6 +651,10 @@
     "                pred_out_1, \n",
     "                score_thres=score_thres,\n",
     "                grid=False)\n",
+    "            \n",
+    "            if classification_result_1 is not None:\n",
+    "                cv2_color_1 = classification_colors[classification_result_1]\n",
+    "                pred_pic_1 = cv2.rectangle(pred_pic_1, [0, 0], [config.IMG_W-2, config.IMG_H-2], cv2_color_1, 4)\n",
     "            \n",
     "            ax[ax_idx][1].imshow(pred_pic_1)\n",
     "            ax[ax_idx][1].set_axis_off()\n",
@@ -640,7 +676,7 @@
     "            # pred_out_2 = model(img_to_model_2)\n",
     "            # pred_out_2 = pred_out_2.permute(0, 2, 3, 1)\n",
     "            \n",
-    "            pred_out_2 = onnx_predict(\n",
+    "            pred_out_2, classification_result_2 = onnx_predict(\n",
     "                img_to_model_2,\n",
     "                classify_session,\n",
     "                detect_session,\n",
@@ -652,6 +688,10 @@
     "                pred_out_2, \n",
     "                score_thres=score_thres,\n",
     "                grid=False)\n",
+    "            \n",
+    "            if classification_result_2 is not None:\n",
+    "                cv2_color_2 = classification_colors[classification_result_2]\n",
+    "                pred_pic_2 = cv2.rectangle(pred_pic_2, [0, 0], [config.IMG_W-2, config.IMG_H-2], cv2_color_2, 4)\n",
     "\n",
     "            ax[ax_idx][3].imshow(pred_pic_2)\n",
     "            ax[ax_idx][3].set_axis_off()\n",
@@ -711,26 +751,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/multiprocessing/util.py\", line 300, in _run_finalizers\n",
-      "    finalizer()\n",
-      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/multiprocessing/util.py\", line 224, in __call__\n",
-      "    res = self._callback(*self._args, **self._kwargs)\n",
-      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/multiprocessing/util.py\", line 133, in _remove_temp_dir\n",
-      "    rmtree(tempdir)\n",
-      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/shutil.py\", line 731, in rmtree\n",
-      "    onerror(os.rmdir, path, sys.exc_info())\n",
-      "  File \"/opt/conda/envs/onnx_eval/lib/python3.10/shutil.py\", line 729, in rmtree\n",
-      "    os.rmdir(path)\n",
-      "OSError: [Errno 39] Directory not empty: '/tmp/pymp-u1iba46b'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plot_n_images_onnx(\n",
     "    loader = val_loader, \n",
@@ -794,6 +815,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b24f441-50b0-4191-8017-6d0e4fa08c60",
+   "metadata": {},
+   "source": [
+    "### Classify 1st + Detect 2nd: Classification Thres (30 %) = -0.8472978604, Score Threshold = 0.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e47c128a-d8f9-41fd-9eab-445eeadf1ea3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_n_images_onnx(\n",
+    "    loader = val_loader, \n",
+    "    classification_model ='./onnx_models/medium_fassd__conv341_big__epoch=93.onnx',\n",
+    "    detection_model = './onnx_models/w8a8b8__bed_detector___aimet__fixed_point__qcdq__CPU.onnx', \n",
+    "    classification_thres = -0.8472978604,\n",
+    "    score_thres = 0.15,\n",
+    "    n_imgs = N_IMGS_PLOT,\n",
+    "    save_name = save_classify_03_detect_015)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "09660cfb-b5ea-48b1-b1fc-3bfaf59dfcbc",
    "metadata": {},
    "source": [
@@ -802,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ca2f2276-956c-40af-ac8b-979c3857d894",
    "metadata": {},
    "outputs": [],
@@ -826,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "64e826b6-3e64-44fb-a78e-e28b9ac304dc",
    "metadata": {},
    "outputs": [],
@@ -850,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "67007a86-9450-42b4-bad3-ec3fba2e6038",
    "metadata": {
     "tags": []
