Detector: PR curves with thres 0.001. Classifier: Mobilenet and ShuffleNet exported to ONNX.

--- a/code/object_detection/eval_alladin_vs_torchmetrics_mAP.ipynb
+++ b/code/object_detection/eval_alladin_vs_torchmetrics_mAP.ipynb
@@ -12,7 +12,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:albumentations.check_version:A new version of Albumentations is available: 1.4.11 (you have 1.4.10). Upgrade using: pip install --upgrade albumentations\n"
+      "INFO:albumentations.check_version:A new version of Albumentations is available: 1.4.13 (you have 1.4.10). Upgrade using: pip install --upgrade albumentations\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "log_path = './mAP_&_pr_curves/epochs=150__max_obj_10__simple_model/'\n",
+    "log_path = './mAP_&_pr_curves/epochs=150__max_obj_10__simple_model__thres_001/'\n",
     "\n",
     "logger = logging.getLogger(\"GonLogger\")\n",
     "logger.propagate = False\n",
@@ -63,6 +63,7 @@
     "            f'\\tMax Obj = {config.MAX_OBJ}.\\n' +\n",
     "            f'\\tIOU Threshold = {config.IOU_THRESHOLD}.\\n' +\n",
     "            f'\\tNMS IOU Threshold = {config.NMS_IOU_THRESHOLD}.\\n' +\n",
+    "            f'\\tScore Threshold = {config.SCORE_THRESHOLD}.\\n' +\n",
     "            '\\tNMS IOU Threshold does not change too much, so it is not tested.\\n')"
    ]
   },
@@ -198,14 +199,14 @@
       "DFire Removed due to overlapping: 310\n",
       "DFire Removed due to more than 10: 13\n",
       "\n",
-      "Test dataset len: 3983\n",
+      "Test DFire dataset len: 3983\n",
       "\n",
       "TEST FASDD UAV dataset\n",
       "FASDD Removed wrong images: 0\n",
       "FASDD Removed due to overlapping: 377\n",
       "FASDD Removed due to more than 10: 156\n",
       "\n",
-      "Val FASDD UAV dataset len: 3648\n",
+      "Test FASDD UAV dataset len: 3648\n",
       "\n",
       "TEST FASDD CV dataset\n",
       "FASDD Removed wrong images: 0\n",
@@ -488,7 +489,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Get Boxes: 100%|█████████████████████████████████████████████████████████████████████████| 62/62 [00:15<00:00,  4.08it/s]\n"
+      "Get Boxes: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 62/62 [02:07<00:00,  2.06s/it]\n"
      ]
     }
    ],
@@ -510,7 +511,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mAP:@.5: 100%|█████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  2.33it/s]\n"
+      "mAP:@.5: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:12<00:00,  6.19s/it]\n"
      ]
     }
    ],
@@ -533,16 +534,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mAP @0.50   0.4056\n",
+      "mAP @0.50   0.4329\n",
       "Average Precision\n",
-      "- Smoke     0.4618\n",
-      "- Fire      0.3494\n",
+      "- Smoke     0.4999\n",
+      "- Fire      0.3659\n",
       "Class Precision\n",
-      "- Smoke     0.5755\n",
-      "- Fire      0.5252\n",
+      "- Smoke     0.0118\n",
+      "- Fire      0.0717\n",
       "Class Recall\n",
-      "- Smoke     0.5806\n",
-      "- Fire      0.4413\n"
+      "- Smoke     0.7097\n",
+      "- Fire      0.4862\n"
      ]
     }
    ],
@@ -569,7 +570,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Validating: 100%|████████████████████████████████████████████████████████████████████████| 62/62 [00:23<00:00,  2.67it/s]\n"
+      "Validating: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 62/62 [02:15<00:00,  2.19s/it]\n"
      ]
     }
    ],
@@ -589,7 +590,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mAP': tensor(0.4114), 'AP': [0.4675503671169281, 0.3553425371646881], 'AR': [0.5805785059928894, 0.441303014755249]}\n"
+      "{'mAP': tensor(0.4361), 'AP': [0.5025447010993958, 0.3697100579738617], 'AR': [0.7097107172012329, 0.48617085814476013]}\n"
      ]
     }
    ],
@@ -616,7 +617,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Get Boxes: 100%|█████████████████████████████████████████████████████████████████████████| 57/57 [00:16<00:00,  3.46it/s]\n"
+      "Get Boxes: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 57/57 [01:47<00:00,  1.89s/it]\n"
      ]
     }
    ],
@@ -636,7 +637,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mAP:@.5: 100%|█████████████████████████████████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.17it/s]\n"
+      "mAP:@.5: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:12<00:00,  6.08s/it]\n"
      ]
     }
    ],
@@ -659,16 +660,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mAP @0.50   0.6050\n",
+      "mAP @0.50   0.6214\n",
       "Average Precision\n",
-      "- Smoke     0.6684\n",
-      "- Fire      0.5416\n",
+      "- Smoke     0.6937\n",
+      "- Fire      0.5491\n",
       "Class Precision\n",
-      "- Smoke     0.7987\n",
-      "- Fire      0.8818\n",
+      "- Smoke     0.0159\n",
+      "- Fire      0.0794\n",
       "Class Recall\n",
-      "- Smoke     0.6922\n",
-      "- Fire      0.5536\n"
+      "- Smoke     0.7502\n",
+      "- Fire      0.5657\n"
      ]
     }
    ],
@@ -695,7 +696,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Validating: 100%|████████████████████████████████████████████████████████████████████████| 57/57 [00:29<00:00,  1.94it/s]\n"
+      "Validating: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 57/57 [01:52<00:00,  1.98s/it]\n"
      ]
     }
    ],
@@ -715,7 +716,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mAP': tensor(0.6057), 'AP': [0.6686656475067139, 0.5427393317222595], 'AR': [0.6917545795440674, 0.5536009073257446]}\n"
+      "{'mAP': tensor(0.6197), 'AP': [0.6906685829162598, 0.5487518906593323], 'AR': [0.7483221292495728, 0.5656954646110535]}\n"
      ]
     }
    ],
@@ -742,7 +743,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Get Boxes: 100%|███████████████████████████████████████████████████████████████████████| 242/242 [00:50<00:00,  4.76it/s]\n"
+      "Get Boxes: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 242/242 [07:47<00:00,  1.93s/it]\n"
      ]
     }
    ],
@@ -762,7 +763,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mAP:@.5: 100%|█████████████████████████████████████████████████████████████████████████████| 2/2 [00:08<00:00,  4.33s/it]\n"
+      "mAP:@.5: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [02:32<00:00, 76.40s/it]\n"
      ]
     }
    ],
@@ -785,16 +786,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mAP @0.50   0.7009\n",
+      "mAP @0.50   0.7270\n",
       "Average Precision\n",
-      "- Smoke     0.6933\n",
-      "- Fire      0.7085\n",
+      "- Smoke     0.7325\n",
+      "- Fire      0.7215\n",
       "Class Precision\n",
-      "- Smoke     0.7062\n",
-      "- Fire      0.7002\n",
+      "- Smoke     0.0157\n",
+      "- Fire      0.0769\n",
       "Class Recall\n",
-      "- Smoke     0.7571\n",
-      "- Fire      0.7591\n"
+      "- Smoke     0.8602\n",
+      "- Fire      0.7851\n"
      ]
     }
    ],
@@ -821,7 +822,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Validating: 100%|██████████████████████████████████████████████████████████████████████| 242/242 [01:19<00:00,  3.05it/s]\n"
+      "Validating: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 242/242 [08:08<00:00,  2.02s/it]\n"
      ]
     }
    ],
@@ -843,7 +844,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mAP': tensor(0.6977), 'AP': [0.6914454698562622, 0.7040181159973145], 'AR': [0.7572426199913025, 0.7590928077697754]}\n"
+      "{'mAP': tensor(0.7260), 'AP': [0.7317706346511841, 0.7202243804931641], 'AR': [0.8600620627403259, 0.7850919365882874]}\n"
      ]
     }
    ],
@@ -872,7 +873,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Get Boxes: 100%|███████████████████████████████████████████████████████████████████████| 361/361 [01:21<00:00,  4.44it/s]\n"
+      "Get Boxes: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 361/361 [11:58<00:00,  1.99s/it]\n"
      ]
     }
    ],
@@ -894,7 +895,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mAP:@.5: 100%|█████████████████████████████████████████████████████████████████████████████| 2/2 [00:24<00:00, 12.25s/it]\n"
+      "mAP:@.5: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [05:18<00:00, 159.13s/it]\n"
      ]
     }
    ],
@@ -917,16 +918,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mAP @0.50   0.6411\n",
+      "mAP @0.50   0.6663\n",
       "Average Precision\n",
-      "- Smoke     0.6552\n",
-      "- Fire      0.6270\n",
+      "- Smoke     0.6924\n",
+      "- Fire      0.6402\n",
       "Class Precision\n",
-      "- Smoke     0.6990\n",
-      "- Fire      0.6969\n",
+      "- Smoke     0.0151\n",
+      "- Fire      0.0767\n",
       "Class Recall\n",
-      "- Smoke     0.7165\n",
-      "- Fire      0.6754\n"
+      "- Smoke     0.8160\n",
+      "- Fire      0.7019\n"
      ]
     }
    ],
@@ -955,7 +956,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Validating: 100%|██████████████████████████████████████████████████████████████████████| 361/361 [02:11<00:00,  2.75it/s]\n"
+      "Validating: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 361/361 [12:13<00:00,  2.03s/it]\n"
      ]
     }
    ],
@@ -977,7 +978,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mAP': tensor(0.6405), 'AP': [0.6541241407394409, 0.6267908811569214], 'AR': [0.7165079712867737, 0.6754377484321594]}\n"
+      "{'mAP': tensor(0.6662), 'AP': [0.6918432116508484, 0.6405062675476074], 'AR': [0.8155389428138733, 0.7019383907318115]}\n"
      ]
     }
    ],
@@ -1011,7 +1012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
