Eval for Raspi with DFire MINI

--- a/code/quantization/brevitas_inference_view_evaluation/eval_onnx_pics_confMTX.ipynb
+++ b/code/quantization/brevitas_inference_view_evaluation/eval_onnx_pics_confMTX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "6e8a513a-1549-4be7-af63-4f9542994187",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "423ca7c6-5d21-460f-9d55-073aceab5616",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "id": "5b3e8a29-500e-44e4-8cb9-f94092708cfb",
    "metadata": {
     "tags": []
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "id": "9ff4b51c-1906-4b3d-9f5e-21ee490f8c75",
    "metadata": {
     "tags": []
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "id": "f2c01c04-ca3b-4ff1-99c6-5d2bc76f17dc",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "id": "fa5aedc8-cf78-4fe4-bb54-dd36facb21f9",
    "metadata": {
     "tags": []
@@ -174,7 +174,8 @@
     }
    ],
    "source": [
-    "dfire_val_loader = datasets.get_dfire_val_loader(shuffle_val_imgs)"
+    "#dfire_val_loader = datasets.get_dfire_val_loader(shuffle_val_imgs)\n",
+    "dfire_val_loader = datasets.get_dfire_val_loader(shuffle=False)"
    ]
   },
   {
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "id": "08b35018-af60-4f91-8e20-4494dc9356d8",
    "metadata": {},
    "outputs": [
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "id": "539153b5-e9e7-40f3-a0db-4069363fe144",
    "metadata": {
     "tags": []
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 9,
    "id": "f582081b-1b2e-4176-ae58-11a1bbe80aad",
    "metadata": {},
    "outputs": [],
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 10,
    "id": "060179d4-88d1-4bcb-bf75-df7db826b1a7",
    "metadata": {},
    "outputs": [],
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 11,
    "id": "39ba681a-c512-4bed-a76d-31a12ec192e1",
    "metadata": {},
    "outputs": [],
@@ -391,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 12,
    "id": "2ea6cab1-e05d-4465-8d22-87a126a9d5ee",
    "metadata": {},
    "outputs": [],
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 13,
    "id": "f0342a56-6e8c-473c-8c10-f3a1efe44a5d",
    "metadata": {},
    "outputs": [],
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 14,
    "id": "27e517e5-2a56-4b2a-8038-e76cd31de0d6",
    "metadata": {
     "tags": []
@@ -447,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 15,
    "id": "accfad0c-28e2-4067-ae94-fdb843541c3a",
    "metadata": {},
    "outputs": [],
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 16,
    "id": "11b83768-c080-4416-9795-8a94dbf013d9",
    "metadata": {},
    "outputs": [],
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 17,
    "id": "31e277c5-f5ee-4021-ac52-adc58fb284a5",
    "metadata": {},
    "outputs": [],
@@ -514,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 40,
    "id": "12a110f3-c479-433e-814c-790a905f17e3",
    "metadata": {},
    "outputs": [],
@@ -554,6 +555,7 @@
     "            yhat = ort_session.run(None, ort_inputs)\n",
     "            yhat = np.array(yhat)\n",
     "            yhat = torch.sigmoid(torch.tensor(yhat).squeeze(dim=0))\n",
+    "            #yhat = torch.tensor(yhat).squeeze(dim=0)\n",
     "            \n",
     "            precision_metric.update(yhat, target)\n",
     "            recall_metric.update(yhat, target)\n",
@@ -640,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 41,
    "id": "f0703073-9190-41ca-8bb6-4f8f829e51db",
    "metadata": {},
    "outputs": [
@@ -648,7 +650,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Validating: 100%|████████████████████████████████████████████████████████████████████████████████| 380/380 [01:15<00:00,  5.01it/s]"
+      "Validating: 100%|███████████████████████████████████████████████████████████████████████████████████████████████| 380/380 [01:15<00:00,  5.04it/s]"
      ]
     },
     {
@@ -674,7 +676,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 35,
+   "id": "e0a3a1db-c0d3-4e71-b507-9c824f63b2b7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Validating: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████| 67/67 [00:12<00:00,  5.55it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      |Accuracy |Precision|Recall   |F1       \n",
+      "Smoke |0.8972   |0.9172   |0.8643   |0.8899   \n",
+      "Fire  |0.9636   |0.9177   |0.9441   |0.9307   \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics = eval_fn(loader=dfire_val_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "ebcc1f79-6ea6-4083-8db7-eb950ea77be7",
    "metadata": {},
    "outputs": [
@@ -706,18 +744,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 21,
    "id": "a5b957ed-165b-4687-9dc3-78ad410d8546",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.axis.YTick at 0x7f7bf2fee050>,\n",
-       " <matplotlib.axis.YTick at 0x7f7bf2fee4d0>]"
+       "[<matplotlib.axis.YTick at 0x7fa512c7d480>,\n",
+       " <matplotlib.axis.YTick at 0x7fa512c7ce20>]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -741,18 +779,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 22,
    "id": "1b41bc75-c6fc-4a84-bc97-5b765da18e13",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.axis.YTick at 0x7f7bc295dd80>,\n",
-       " <matplotlib.axis.YTick at 0x7f7bc295d3c0>]"
+       "[<matplotlib.axis.YTick at 0x7fa5111bc580>,\n",
+       " <matplotlib.axis.YTick at 0x7fa511177e80>]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -784,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 23,
    "id": "95e66395-cc2f-4269-bb07-a9e9135993e4",
    "metadata": {},
    "outputs": [
@@ -816,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 24,
    "id": "53242b6b-c406-4690-80de-cb6557f1e8f7",
    "metadata": {},
    "outputs": [],
@@ -826,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 25,
    "id": "9df7a217-f16b-4cb0-8e4a-0b2eb3945e79",
    "metadata": {},
    "outputs": [
@@ -853,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 26,
    "id": "143362f9-1139-45ac-ae17-2f3816b5f988",
    "metadata": {},
    "outputs": [
@@ -909,7 +947,7 @@
        "Fire     0.9663     0.9256  0.9743  0.9493"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 27,
    "id": "0e2970bc-90d2-4de2-a914-d593c5d8f39d",
    "metadata": {
     "tags": []
@@ -957,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 28,
    "id": "06893b67-8753-4110-888a-0e08498148d9",
    "metadata": {
     "tags": []
@@ -981,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 29,
    "id": "59129303-754d-4458-8f70-cfe7fb2f7313",
    "metadata": {
     "tags": []
@@ -993,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 30,
    "id": "1268805e-71aa-4c24-a62c-37746b03e4ae",
    "metadata": {
     "tags": []
@@ -1031,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 31,
    "id": "a7893afb-5609-4059-bbac-7eba5e2cc048",
    "metadata": {
     "tags": []
@@ -1053,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 32,
    "id": "4bb0eb97-1cce-46dc-8c47-32194dc891de",
    "metadata": {
     "tags": []
@@ -1077,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 33,
    "id": "c2ecb259-1d28-4c5e-8feb-15edd2353185",
    "metadata": {
     "tags": []
@@ -1089,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 34,
    "id": "70109744-2f01-489a-b89d-ec3185e8525b",
    "metadata": {
     "tags": []
